# AIPlaymaker

./: .pylintrc  README.md  app.py  config.py  mypy.ini  pyproject.toml  pytest.ini  run_tests.py
src/: app.py  exceptions.py  mytypes.py  rate_limiter.py  t3tree.py
src/connect_four/: c4_board.py  c4_constants.py  c4_converter.py  c4_dag.py  c4_data_generator.py  c4_mcts.py  c4_net.py  c4_nets.py  c4_self_play.py  c4_service.py  c4_trainer.py  c4_tree.py  results.txt
src/connect_four/data/: game_data.h5  seen_states.pkl
src/connect_four/models/: conv_configs.json  fc_configs.json  model1_config.json
src/infra/: cache.py
src/resources/: connect_four.py  game_moves.py  games_list.py  tictactoe.py
src/tictactoe/: service.py  t3Board.py  t3Tree.py  t3_board.py  t3_constants.py  t3_converter.py  t3_data_generator.py  t3_net.py  t3_self_play.py  t3_service.py  t3_trainer.py  t3_tree.py
src/tictactoe/models/: model_216_0.0003_13.pth  model_216_0.0003_18.pth  model_216_0.0003_21.pth  model_216_0.0003_23.pth  model_216_0.0003_9.pth
tests/connect_four/: test_c4_board.py
tests/tictactoe/: test_constants.py  test_service.py  test_t3_board.py  test_t3_converter.py  test_t3_tree.py
