[tool.poetry]
name = "aiplaymaker"
version = "0.1.0"
description = ""
authors = ["Noot"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
flask-restful = "^0.3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
pytest = "^7.3.1"
pytest-coverage = "^0.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
