[tool.poetry]
name = "aiplaymaker"
version = "0.1.0"
description = ""
authors = ["Noot"]
license = "GNU"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
flask-restful = "^0.3.9"
torch = "^1.13.1"
numpy = "^1.25.1"
panda = "^0.3.1"
tqdm = "^4.65.0"
h5py = "^3.9.0"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
pytest = "^7.3.1"
pytest-coverage = "^0.0"
pre-commit = "^3.3.1"
pylint = "^2.17.4"
flake8 = "^6.0.0"
mypy = "^1.2.0"
isort = "^5.12.0"
bandit = "^1.7.5"
python-dotenv = "^1.0.0"
ipykernel = "^6.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
lint = "python -m pylint src && python -m flake8 src && python -m mypy src && python -m bandit -r src"
test = "python -m pytest --cov=src tests/"
pre_commit = "pre-commit run --files=$(git diff --name-only --cached)"